Edit BEM class names for index admin page

--- a/resources/source/css/admin.css
+++ b/resources/source/css/admin.css
@@ -3,19 +3,19 @@
   font-family: "Montserrat", sans-serif;
 }
 
-.main__add-person,
+.index__add-person,
 .person__file-browse,
 .person__save {
   background-color: #001871;
   color: #ffffff;
   border: none;
 }
-.main__add-person:hover,
+.index__add-person:hover,
 .person__file-browse:hover,
 .person__save:hover {
   background-color: #4b71fe;
 }
-.main__add-person:active,
+.index__add-person:active,
 .person__file-browse:active,
 .person__save:active {
   background-color: #002eda;
@@ -45,27 +45,28 @@
   color: #ffffff;
 }
 
-.main__container {
+.index__container {
   width: 100%;
   max-width: 1080px;
-  margin: 0 auto 271px;
+  min-height: calc(100vh - 180px);
+  margin: 0 auto;
   padding: 30px 20px 50px;
 }
 
-.main__title {
+.index__title {
   font-size: 40px;
   font-weight: 700;
   line-height: 48px;
   letter-spacing: -2%;
 }
 
-.main__line {
+.index__line {
   height: 1px;
   margin: 30px 0 50px;
   background-color: #505050;
 }
 
-.main__add-person {
+.index__add-person {
   width: 200px;
   height: 40px;
   border-radius: 4px;
@@ -74,20 +75,20 @@
   line-height: 25px;
 }
 
-.main__list {
+.index__list {
   margin: 0;
   width: 100%;
   max-width: 500px;
 }
 
-.main__employee {
+.index__employee {
   margin: 20px auto;
   padding: 13px 13px 13px 20px;
   border: 1px solid #505050;
   border-radius: 4px;
 }
 
-.main__name {
+.index__name {
   font-size: 18px;
   line-height: 26px;
 }
