--- a/resources/views/admin/admin-panel.html
+++ b/resources/views/admin/admin-panel.html
@@ -7,43 +7,43 @@
     <title>Our team</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../source/css/zeroing.css">
-    <link rel="stylesheet" href="../../source/css/admin.css">
+    <link rel="stylesheet" href="/resources/source/css/zeroing.css">
+    <link rel="stylesheet" href="/resources/source/css/admin.css">
 </head>
 
 <body>
     <nav class="nav">
         <div class="nav__container">
             <h2 class="nav__start m-0">AdminPanel</h2>
-            <img class="nav__logo" src="../../images/admin/admin-logo.svg" alt="Admin Logo">
+            <img class="nav__logo" src="/resources/images/admin/admin-logo.svg" alt="Admin Logo">
         </div>
     </nav>
-    <main class="main">
-        <div class="main__container">
-            <h1 class="main__title">Our Team</h1>
-            <div class="main__line"></div>
-            <div class="main__list">
-                <button class="main__add-person btn btn-primary">Add new person</button>
-                <div class="main__employees">
-                    <div class="main__employee row justify-content-between align-items-center">
-                        <div class="main__name col-10 p-0">Jessica Alba - CEO</div>
+    <main class="index">
+        <div class="index__container">
+            <h1 class="index__title">Our Team</h1>
+            <div class="index__line"></div>
+            <div class="index__list">
+                <button class="index__add-person btn btn-primary">Add new person</button>
+                <div class="index__employees">
+                    <div class="index__employee row justify-content-between align-items-center">
+                        <div class="index__name col-10 p-0">Jessica Alba - CEO</div>
                         <div class="col text-end p-0">
-                            <img src="../../images/admin/edit.svg" alt="Edit">
-                            <img src="../../images/admin/delete.svg" alt="Delete">
+                            <img src="/resources/images/admin/edit.svg" alt="Edit">
+                            <img src="/resources/images/admin/delete.svg" alt="Delete">
                         </div>
                     </div>
-                    <div class="main__employee row justify-content-between align-items-center">
-                        <div class="main__name col-10 p-0">Al Rayhan - Ul Designer</div>
+                    <div class="index__employee row justify-content-between align-items-center">
+                        <div class="index__name col-10 p-0">Al Rayhan - Ul Designer</div>
                         <div class="col text-end p-0">
-                            <img src="../../images/admin/edit.svg" alt="Edit">
-                            <img src="../../images/admin/delete.svg" alt="Delete">
+                            <img src="/resources/images/admin/edit.svg" alt="Edit">
+                            <img src="/resources/images/admin/delete.svg" alt="Delete">
                         </div>
                     </div>
-                    <div class="main__employee row justify-content-between align-items-center">
-                        <div class="main__name col-10 p-0">Jamal Hammer - Junior</div>
+                    <div class="index__employee row justify-content-between align-items-center">
+                        <div class="index__name col-10 p-0">Jamal Hammer - Junior</div>
                         <div class="col text-end p-0">
-                            <img src="../../images/admin/edit.svg" alt="Edit">
-                            <img src="../../images/admin/delete.svg" alt="Delete">
+                            <img src="/resources/images/admin/edit.svg" alt="Edit">
+                            <img src="/resources/images/admin/delete.svg" alt="Delete">
                         </div>
                     </div>
                 </div>
