Add container for main of person page

--- a/resources/source/css/admin.css
+++ b/resources/source/css/admin.css
@@ -106,7 +106,7 @@
   letter-spacing: 0.16px;
 }
 
-.person {
+.person__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
