--- a/resources/source/scss/admin.scss
+++ b/resources/source/scss/admin.scss
@@ -99,7 +99,7 @@
     letter-spacing: 0.16px;
 }
 
-.person {
+.person__container {
     display: flex;
     justify-content: center;
     align-items: center;
