Fix some styles for admin panel

--- a/resources/views/admin/forms/add-person-form.html
+++ b/resources/views/admin/forms/add-person-form.html
@@ -17,7 +17,7 @@
             <a href="/resources/views/admin/admin-panel.html">
                 <h2 class="nav__start m-0">AdminPanel</h2>
             </a>
-            <img class="nav__logo" src="../../../images/admin/admin-logo.svg" alt="Admin Logo">
+            <img class="nav__logo" src="/resources/images/admin/admin-logo.svg" alt="Admin Logo">
         </div>
     </nav>
     <main class="person">
