--- a/resources/source/css/admin.css
+++ b/resources/source/css/admin.css
@@ -3,24 +3,6 @@
   font-family: "Montserrat", sans-serif;
 }
 
-.index__add-person,
-.person__file-browse,
-.person__save {
-  background-color: #001871;
-  color: #ffffff;
-  border: none;
-}
-.index__add-person:hover,
-.person__file-browse:hover,
-.person__save:hover {
-  background-color: #4b71fe;
-}
-.index__add-person:active,
-.person__file-browse:active,
-.person__save:active {
-  background-color: #002eda;
-}
-
 .nav__container {
   width: 100%;
   max-width: 1080px;
@@ -45,12 +27,13 @@
   color: #ffffff;
 }
 
-.index__container {
+.index__container,
+.person__container {
   width: 100%;
   max-width: 1080px;
   min-height: calc(100vh - 180px);
   margin: 0 auto;
-  padding: 30px 20px 50px;
+  padding: 30px 20px 0;
 }
 
 .index__title {
@@ -66,11 +49,29 @@
   background-color: #505050;
 }
 
+.index__add-person,
+.person__file-browse,
+.person__save {
+  background-color: #001871;
+  color: #ffffff;
+  border: none;
+  font-weight: 600;
+}
+.index__add-person:hover,
+.person__file-browse:hover,
+.person__save:hover {
+  background-color: #4b71fe;
+}
+.index__add-person:active,
+.person__file-browse:active,
+.person__save:active {
+  background-color: #002eda;
+}
+
 .index__add-person {
   width: 200px;
   height: 40px;
   border-radius: 4px;
-  font-weight: 600;
   font-size: 18px;
   line-height: 25px;
 }
@@ -118,11 +119,6 @@
           align-items: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  min-height: calc(100vh - 180px);
-  width: 100%;
-  max-width: 1080px;
-  padding: 30px 20px 0;
-  margin: 0 auto;
 }
 
 .person__form {
@@ -195,7 +191,6 @@
 }
 
 .person__file-browse {
-  font-weight: 600;
   font-size: 16px;
   line-height: 24px;
   border: 1px solid #ced4da;
@@ -207,7 +202,6 @@
   height: 40px;
   margin-top: 20px;
   border-radius: 4px;
-  font-weight: 600;
   font-size: 16px;
   line-height: 19.5px;
 }
