--- a/resources/source/scss/admin.scss
+++ b/resources/source/scss/admin.scss
@@ -4,22 +4,6 @@
     font-family: "Montserrat", sans-serif;
 }
 
-.index__add-person,
-.person__file-browse,
-.person__save {
-    background-color: #001871;
-    color: #ffffff;
-    border: none;
-
-    &:hover {
-        background-color: #4b71fe;
-    }
-
-    &:active {
-        background-color: #002eda;
-    }
-}
-
 .nav__container {
     width: 100%;
     max-width: 1080px;
@@ -38,12 +22,13 @@
     color: #ffffff;
 }
 
-.index__container {
+.index__container,
+.person__container {
     width: 100%;
     max-width: 1080px;
     min-height: calc(100vh - 180px);
     margin: 0 auto;
-    padding: 30px 20px 50px;
+    padding: 30px 20px 0;
 }
 
 .index__title {
@@ -59,11 +44,27 @@
     background-color: #505050;
 }
 
+.index__add-person,
+.person__file-browse,
+.person__save {
+    background-color: #001871;
+    color: #ffffff;
+    border: none;
+    font-weight: 600;
+
+    &:hover {
+        background-color: #4b71fe;
+    }
+
+    &:active {
+        background-color: #002eda;
+    }
+}
+
 .index__add-person {
     width: 200px;
     height: 40px;
     border-radius: 4px;
-    font-weight: 600;
     font-size: 18px;
     line-height: 25px;
 }
@@ -104,11 +105,6 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    min-height: calc(100vh - 180px);
-    width: 100%;
-    max-width: 1080px;
-    padding: 30px 20px 0;
-    margin: 0 auto;
 }
 
 .person__form {
@@ -181,7 +177,6 @@
 }
 
 .person__file-browse {
-    font-weight: 600;
     font-size: 16px;
     line-height: 24px;
     border: 1px solid #ced4da;
@@ -193,7 +188,6 @@
     height: 40px;
     margin-top: 20px;
     border-radius: 4px;
-    font-weight: 600;
     font-size: 16px;
     line-height: 19.5px;
 }
