Add edit person page
Also fix nav title, use p instead of h2

--- a/resources/views/admin/admin-panel.html
+++ b/resources/views/admin/admin-panel.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="nav">
         <div class="nav__container">
-            <h2 class="nav__start m-0">AdminPanel</h2>
+            <p class="nav__start m-0">AdminPanel</p>
             <img class="nav__logo" src="/resources/images/admin/admin-logo.svg" alt="Admin Logo">
         </div>
     </nav>
