--- a/resources/views/admin/forms/edit-person-form.html
+++ b/resources/views/admin/forms/edit-person-form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create person</title>
+    <title>Edit person</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/resources/source/css/zeroing.css">
@@ -42,7 +42,8 @@
                         <div class="col"><label for="description">Description</label></div>
                         <div class="col">
                             <textarea name="" id="description" name="description"
-                                class="person__description form-control"></textarea>
+                                class="person__description form-control"
+                                placeholder="I'm an expert in Graphics, Website and can also develop sites in WordPress, JQuery."></textarea>
                         </div>
                     </div>
                     <div class="row">
