Fix title of edit person page

--- a/resources/views/admin/forms/edit-person-form.html
+++ b/resources/views/admin/forms/edit-person-form.html
@@ -23,7 +23,7 @@
     <main class="person">
         <div class="person__container">
             <form action="" class="person__form">
-                <h1 class="person__title">Create person</h1>
+                <h1 class="person__title">Edit person</h1>
                 <img src="/resources/images/admin/cross.svg" alt="Close form" class="person__close">
                 <div class="person__data">
                     <div class="row">
