--- a/resources/source/scss/admin.scss
+++ b/resources/source/scss/admin.scss
@@ -84,7 +84,13 @@
 
 .index__name {
     font-size: 18px;
-    line-height: 26px;
+    line-height: 24px;
+}
+
+.index__actions {
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
 }
 
 .footer__container {
@@ -184,7 +190,7 @@
 }
 
 .person__save {
-    width: 126px;
+    width: 120px;
     height: 40px;
     margin-top: 20px;
     border-radius: 4px;
