--- a/resources/views/admin/admin-panel.html
+++ b/resources/views/admin/admin-panel.html
@@ -23,27 +23,41 @@
             <h1 class="index__title">Our Team</h1>
             <div class="index__line"></div>
             <div class="index__list">
-                <button class="index__add-person btn btn-primary">Add new person</button>
+                <a href="forms/add-person-form.html">
+                    <button class="index__add-person btn btn-primary">Add new person</button>
+                </a>
                 <div class="index__employees">
                     <div class="index__employee row justify-content-between align-items-center">
                         <div class="index__name col-10 p-0">Jessica Alba - CEO</div>
-                        <div class="col text-end p-0">
-                            <img src="/resources/images/admin/edit.svg" alt="Edit">
-                            <img src="/resources/images/admin/delete.svg" alt="Delete">
+                        <div class="index__actions col p-0">
+                            <a href="forms/edit-person-form.html">
+                                <img src="/resources/images/admin/edit.svg" alt="Edit">
+                            </a>
+                            <a href="">
+                                <img src="/resources/images/admin/delete.svg" alt="Delete">
+                            </a>
                         </div>
                     </div>
                     <div class="index__employee row justify-content-between align-items-center">
                         <div class="index__name col-10 p-0">Al Rayhan - Ul Designer</div>
-                        <div class="col text-end p-0">
-                            <img src="/resources/images/admin/edit.svg" alt="Edit">
-                            <img src="/resources/images/admin/delete.svg" alt="Delete">
+                        <div class="index__actions col p-0">
+                            <a href="forms/edit-person-form.html">
+                                <img src="/resources/images/admin/edit.svg" alt="Edit">
+                            </a>
+                            <a href="">
+                                <img src="/resources/images/admin/delete.svg" alt="Delete">
+                            </a>
                         </div>
                     </div>
                     <div class="index__employee row justify-content-between align-items-center">
                         <div class="index__name col-10 p-0">Jamal Hammer - Junior</div>
-                        <div class="col text-end p-0">
-                            <img src="/resources/images/admin/edit.svg" alt="Edit">
-                            <img src="/resources/images/admin/delete.svg" alt="Delete">
+                        <div class="index__actions col p-0">
+                            <a href="forms/edit-person-form.html">
+                                <img src="/resources/images/admin/edit.svg" alt="Edit">
+                            </a>
+                            <a href="">
+                                <img src="/resources/images/admin/delete.svg" alt="Delete">
+                            </a>
                         </div>
                     </div>
                 </div>
