Fix nav block and title name for admin page
Code review by @IvanKavaliov

--- a/resources/source/scss/admin.scss
+++ b/resources/source/scss/admin.scss
@@ -4,7 +4,7 @@
     font-family: "Montserrat", sans-serif;
 }
 
-.nav__container {
+.header__container {
     width: 100%;
     max-width: 1080px;
     display: flex;
@@ -16,7 +16,7 @@
     border-radius: 4px;
 }
 
-.nav__start {
+.header__start {
     font-weight: 800;
     font-size: 20px;
     color: #ffffff;
