--- a/resources/views/admin/admin-panel.html
+++ b/resources/views/admin/admin-panel.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our team</title>
+    <title>AdminPanel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/resources/source/css/zeroing.css">
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-    <nav class="nav">
-        <div class="nav__container">
-            <p class="nav__start m-0">AdminPanel</p>
-            <img class="nav__logo" src="/resources/images/admin/admin-logo.svg" alt="Admin Logo">
+    <header class="header">
+        <div class="header__container">
+            <p class="header__start m-0">AdminPanel</p>
+            <img class="header__logo" src="/resources/images/admin/admin-logo.svg" alt="Admin Logo">
         </div>
-    </nav>
+    </header>
     <main class="index">
         <div class="index__container">
             <h1 class="index__title">Our Team</h1>
