--- a/resources/views/admin/forms/add-person-form.html
+++ b/resources/views/admin/forms/add-person-form.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-    <nav class="nav">
-        <div class="nav__container">
+    <header class="header">
+        <div class="header__container">
             <a href="/resources/views/admin/admin-panel.html">
-                <p class="nav__start m-0">AdminPanel</p>
+                <p class="header__start m-0">AdminPanel</p>
             </a>
-            <img class="nav__logo" src="/resources/images/admin/admin-logo.svg" alt="Admin Logo">
+            <img class="header__logo" src="/resources/images/admin/admin-logo.svg" alt="Admin Logo">
         </div>
-    </nav>
+    </header>
     <main class="person">
         <div class="person__container">
             <form action="" class="person__form">
