Fix some input styles
Also set auth page to default (set without wrong password)

--- a/resources/views/admin/forms/auth-form.html
+++ b/resources/views/admin/forms/auth-form.html
@@ -30,13 +30,13 @@
                     </div>
                     <div class="auth__row">
                         <label for="password" class="auth__label">Password</label>
-                        <input type="password" id="password" name="password"
-                            class="auth__input auth__input_error form-control" placeholder="Your password">
+                        <input type="password" id="password" name="password" class="auth__input form-control"
+                            placeholder="Your password">
                     </div>
                 </div>
                 <div class="auth__checkout">
                     <button class="auth__enter btn btn-primary">Sign in</button>
-                    <span class="auth__error">wrong password</span>
+                    <span class="auth__error d-none">wrong password</span>
                 </div>
             </form>
         </div>
