--- a/resources/views/admin/forms/edit-person-form.html
+++ b/resources/views/admin/forms/edit-person-form.html
@@ -86,6 +86,22 @@
             <p class="footer__copyright m-0">© PerfectLine</p>
         </div>
     </footer>
+    <script>
+        document.querySelector("#photo").addEventListener("change", displayFileName);
+
+        function displayFileName() {
+            const captionSpan = document.querySelector(".person__file-choose");
+            const filename = this.files[0].name;
+            if (filename.length > 18) {
+                const extensionLength = filename.split(".").pop().length;
+                const wrapStart = filename.slice(0, 12 - extensionLength);
+                const wrapEnd = filename.slice(-3 - extensionLength);
+                captionSpan.textContent = wrapStart + "..." + wrapEnd;
+            } else {
+                captionSpan.textContent = filename;
+            }
+        }
+    </script>
 </body>
 
 </html>
