Move media queries in specific block

--- a/resources/source/scss/style.scss
+++ b/resources/source/scss/style.scss
@@ -23,17 +23,6 @@ $media-w-phone: 576px;
     max-width: $container-max-x;
     margin: 0 auto;
     padding: 45px 0 80px;
-
-    @media screen and (max-width: $media-w-phone) {
-        padding: 20px 20px 40px;
-    }
-}
-
-.header__logo {
-    @media screen and (max-width: $media-w-phone) {
-        width: 180px;
-        height: 100px;
-    }
 }
 
 .header__link,
@@ -58,19 +47,11 @@ $media-w-phone: 576px;
 
 .header__link {
     right: 60px;
-
-    @media screen and (max-width: $media-w-phone) {
-        display: none;
-    }
 }
 
 .header__link-small {
     display: none;
     right: 20px;
-
-    @media screen and (max-width: $media-w-phone) {
-        display: block;
-    }
 }
 
 .header__info {
@@ -85,12 +66,6 @@ $media-w-phone: 576px;
     font-size: 45px;
     line-height: 75px;
     letter-spacing: 2.7px;
-
-    @media screen and (max-width: $media-w-phone) {
-        font-size: 20px;
-        line-height: 24px;
-        max-width: 240px;
-    }
 }
 
 .header__button {
@@ -121,10 +96,6 @@ $media-w-phone: 576px;
     img {
         height: 89px;
     }
-
-    @media screen and (max-width: $media-w-phone) {
-        display: none;
-    }
 }
 
 .header__company {
@@ -146,11 +117,6 @@ $media-w-phone: 576px;
         font-size: 38px;
         line-height: 28px;
         letter-spacing: 2.28px;
-
-        @media screen and (max-width: $media-w-phone) {
-            font-size: 20px;
-            line-height: 28px;
-        }
     }
 
     .subtitle {
@@ -158,11 +124,6 @@ $media-w-phone: 576px;
         font-size: 18px;
         line-height: 28px;
         letter-spacing: 1.08px;
-
-        @media screen and (max-width: $media-w-phone) {
-            font-size: 14px;
-            line-height: 28px;
-        }
     }
 }
 
@@ -172,10 +133,6 @@ $media-w-phone: 576px;
 
 .about__container {
     padding: 129px 0 28px;
-
-    @media screen and (max-width: $media-w-phone) {
-        padding: 40px 20px;
-    }
 }
 
 .about__subtitle {
@@ -186,10 +143,6 @@ $media-w-phone: 576px;
     width: 80%;
     max-width: 1080px;
     margin: 70px auto;
-
-    @media screen and (max-width: $media-w-phone) {
-        width: 100%;
-    }
 }
 
 .about__text {
@@ -212,12 +165,6 @@ $media-w-phone: 576px;
         line-height: 28px;
         letter-spacing: 0.8px;
     }
-
-    @media screen and (max-width: $media-w-phone) {
-        p {
-            font-size: 14px;
-        }
-    }
 }
 
 .about__actually-do {
@@ -226,16 +173,6 @@ $media-w-phone: 576px;
     h3 {
         padding-bottom: 17px;
         font-size: 20px;
-    }
-
-    @media screen and (max-width: $media-w-phone) {
-        font-size: 14px;
-        line-height: 28px;
-        letter-spacing: 1.2px;
-
-        h3 {
-            font-size: 14px;
-        }
     }
 }
 
@@ -246,22 +183,10 @@ $media-w-phone: 576px;
         padding-bottom: 8px;
         font-size: 17px;
     }
-
-    @media screen and (max-width: $media-w-phone) {
-        width: 100%;
-
-        h3 {
-            font-size: 14px;
-        }
-    }
 }
 
 .featured__container {
     padding: 128px 0;
-
-    @media screen and (max-width: $media-w-phone) {
-        padding: 40px 20px;
-    }
 }
 
 .featured__subtitle {
@@ -275,17 +200,6 @@ $media-w-phone: 576px;
     gap: 15px;
     max-width: 1140px;
     margin: 100px auto 0;
-
-    @media screen and (max-width: $media-w-phone) {
-        width: 100%;
-        flex-wrap: nowrap;
-        justify-content: flex-start;
-        overflow-x: scroll;
-
-        > div {
-            width: 100%;
-        }
-    }
 }
 
 .team {
@@ -294,10 +208,6 @@ $media-w-phone: 576px;
 
 .team__container {
     padding: 104px 0 171px;
-
-    @media screen and (max-width: $media-w-phone) {
-        padding: 40px 20px;
-    }
 }
 
 .team__subtitle {
@@ -319,12 +229,6 @@ $media-w-phone: 576px;
     &:hover {
         .employee__about {
             display: block;
-        }
-    }
-
-    @media screen and (max-width: $media-w-phone) {
-        img {
-            width: 100%;
         }
     }
 }
@@ -429,10 +333,6 @@ $media-w-phone: 576px;
         background-color: #001871b5;
         box-shadow: 0px 0px 30px 0px #1515151f;
     }
-
-    @media screen and (max-width: $media-w-phone) {
-        padding: 40px 20px;
-    }
 }
 
 .contact__feedback {
@@ -513,15 +413,6 @@ $media-w-phone: 576px;
     max-width: 455px;
     max-height: 224px;
     margin-top: 33px;
-
-    @media screen and (max-width: $media-w-phone) {
-        width: 100%;
-
-        iframe {
-            max-width: 100%;
-            max-height: fit-content;
-        }
-    }
 }
 
 .footer {
@@ -583,4 +474,111 @@ $media-w-phone: 576px;
 
 .footer__links > li svg {
     fill: #ffffff;
+}
+
+@media screen and (max-width: 576px) {
+    .header__container {
+        padding: 20px 20px 40px;
+    }
+
+    .header__logo {
+        width: 180px;
+        height: 100px;
+    }
+
+    .header__link {
+        display: none;
+    }
+
+    .header__link-small {
+        display: block;
+    }
+
+    .header__title {
+        font-size: 20px;
+        line-height: 24px;
+        max-width: 240px;
+    }
+
+    .header__logos {
+        display: none;
+    }
+
+    .main {
+        .title {
+            font-size: 20px;
+            line-height: 28px;
+        }
+
+        .subtitle {
+            font-size: 14px;
+            line-height: 28px;
+        }
+    }
+
+    .about__container {
+        padding: 40px 20px;
+    }
+
+    .about__samples {
+        width: 100%;
+    }
+
+    .about__text {
+        font-size: 14px;
+    }
+
+    .about__actually-do {
+        font-size: 14px;
+        line-height: 28px;
+        letter-spacing: 1.2px;
+
+        h3 {
+            font-size: 14px;
+        }
+    }
+
+    .about__we-great {
+        width: 100%;
+
+        h3 {
+            font-size: 14px;
+        }
+    }
+
+    .featured__container {
+        padding: 40px 20px;
+    }
+
+    .featured__collection {
+        width: 100%;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        overflow-x: scroll;
+
+        > div {
+            width: 100%;
+        }
+    }
+
+    .team__container {
+        padding: 40px 20px;
+    }
+
+    .employee > img {
+        width: 100%;
+    }
+
+    .contact__container {
+        padding: 40px 20px;
+    }
+
+    .contact__map {
+        width: 100%;
+
+        iframe {
+            max-width: 100%;
+            max-height: fit-content;
+        }
+    }
 }
