--- a/resources/source/css/style.css
+++ b/resources/source/css/style.css
@@ -16,18 +16,6 @@
   margin: 0 auto;
   padding: 45px 0 80px;
 }
-@media screen and (max-width: 576px) {
-  .header__container {
-    padding: 20px 20px 40px;
-  }
-}
-
-@media screen and (max-width: 576px) {
-  .header__logo {
-    width: 180px;
-    height: 100px;
-  }
-}
 
 .header__link,
 .header__link-small {
@@ -52,20 +40,10 @@
 .header__link {
   right: 60px;
 }
-@media screen and (max-width: 576px) {
-  .header__link {
-    display: none;
-  }
-}
 
 .header__link-small {
   display: none;
   right: 20px;
-}
-@media screen and (max-width: 576px) {
-  .header__link-small {
-    display: block;
-  }
 }
 
 .header__info {
@@ -80,13 +58,6 @@
   font-size: 45px;
   line-height: 75px;
   letter-spacing: 2.7px;
-}
-@media screen and (max-width: 576px) {
-  .header__title {
-    font-size: 20px;
-    line-height: 24px;
-    max-width: 240px;
-  }
 }
 
 .header__button {
@@ -119,11 +90,6 @@
 .header__logos img {
   height: 89px;
 }
-@media screen and (max-width: 576px) {
-  .header__logos {
-    display: none;
-  }
-}
 
 .header__company {
   background-color: #68478d;
@@ -144,23 +110,11 @@
   line-height: 28px;
   letter-spacing: 2.28px;
 }
-@media screen and (max-width: 576px) {
-  .main .title {
-    font-size: 20px;
-    line-height: 28px;
-  }
-}
 .main .subtitle {
   font-family: "Merriweather", serif;
   font-size: 18px;
   line-height: 28px;
   letter-spacing: 1.08px;
-}
-@media screen and (max-width: 576px) {
-  .main .subtitle {
-    font-size: 14px;
-    line-height: 28px;
-  }
 }
 
 .about {
@@ -169,11 +123,6 @@
 
 .about__container {
   padding: 129px 0 28px;
-}
-@media screen and (max-width: 576px) {
-  .about__container {
-    padding: 40px 20px;
-  }
 }
 
 .about__subtitle {
@@ -184,11 +133,6 @@
   width: 80%;
   max-width: 1080px;
   margin: 70px auto;
-}
-@media screen and (max-width: 576px) {
-  .about__samples {
-    width: 100%;
-  }
 }
 
 .about__text {
@@ -217,11 +161,6 @@
   line-height: 28px;
   letter-spacing: 0.8px;
 }
-@media screen and (max-width: 576px) {
-  .about__text p {
-    font-size: 14px;
-  }
-}
 
 .about__actually-do {
   margin-bottom: 35px;
@@ -229,16 +168,6 @@
 .about__actually-do h3 {
   padding-bottom: 17px;
   font-size: 20px;
-}
-@media screen and (max-width: 576px) {
-  .about__actually-do {
-    font-size: 14px;
-    line-height: 28px;
-    letter-spacing: 1.2px;
-  }
-  .about__actually-do h3 {
-    font-size: 14px;
-  }
 }
 
 .about__we-great {
@@ -248,22 +177,9 @@
   padding-bottom: 8px;
   font-size: 17px;
 }
-@media screen and (max-width: 576px) {
-  .about__we-great {
-    width: 100%;
-  }
-  .about__we-great h3 {
-    font-size: 14px;
-  }
-}
 
 .featured__container {
   padding: 128px 0;
-}
-@media screen and (max-width: 576px) {
-  .featured__container {
-    padding: 40px 20px;
-  }
 }
 
 .featured__subtitle {
@@ -283,20 +199,6 @@
   max-width: 1140px;
   margin: 100px auto 0;
 }
-@media screen and (max-width: 576px) {
-  .featured__collection {
-    width: 100%;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    overflow-x: scroll;
-  }
-  .featured__collection > div {
-    width: 100%;
-  }
-}
 
 .team {
   background-color: #eff0f2;
@@ -304,11 +206,6 @@
 
 .team__container {
   padding: 104px 0 171px;
-}
-@media screen and (max-width: 576px) {
-  .team__container {
-    padding: 40px 20px;
-  }
 }
 
 .team__subtitle {
@@ -334,11 +231,6 @@
 }
 .employee:hover .employee__about {
   display: block;
-}
-@media screen and (max-width: 576px) {
-  .employee img {
-    width: 100%;
-  }
 }
 
 .employee__about {
@@ -454,11 +346,6 @@
   -webkit-box-shadow: 0px 0px 30px 0px rgba(21, 21, 21, 0.1215686275);
           box-shadow: 0px 0px 30px 0px rgba(21, 21, 21, 0.1215686275);
 }
-@media screen and (max-width: 576px) {
-  .contact__container {
-    padding: 40px 20px;
-  }
-}
 
 .contact__feedback {
   width: 100%;
@@ -561,17 +448,6 @@
   max-height: 224px;
   margin-top: 33px;
 }
-@media screen and (max-width: 576px) {
-  .contact__map {
-    width: 100%;
-  }
-  .contact__map iframe {
-    max-width: 100%;
-    max-height: -webkit-fit-content;
-    max-height: -moz-fit-content;
-    max-height: fit-content;
-  }
-}
 
 .footer {
   padding: 93px 0 152px;
@@ -637,4 +513,92 @@
 
 .footer__links > li svg {
   fill: #ffffff;
+}
+
+@media screen and (max-width: 576px) {
+  .header__container {
+    padding: 20px 20px 40px;
+  }
+  .header__logo {
+    width: 180px;
+    height: 100px;
+  }
+  .header__link {
+    display: none;
+  }
+  .header__link-small {
+    display: block;
+  }
+  .header__title {
+    font-size: 20px;
+    line-height: 24px;
+    max-width: 240px;
+  }
+  .header__logos {
+    display: none;
+  }
+  .main .title {
+    font-size: 20px;
+    line-height: 28px;
+  }
+  .main .subtitle {
+    font-size: 14px;
+    line-height: 28px;
+  }
+  .about__container {
+    padding: 40px 20px;
+  }
+  .about__samples {
+    width: 100%;
+  }
+  .about__text {
+    font-size: 14px;
+  }
+  .about__actually-do {
+    font-size: 14px;
+    line-height: 28px;
+    letter-spacing: 1.2px;
+  }
+  .about__actually-do h3 {
+    font-size: 14px;
+  }
+  .about__we-great {
+    width: 100%;
+  }
+  .about__we-great h3 {
+    font-size: 14px;
+  }
+  .featured__container {
+    padding: 40px 20px;
+  }
+  .featured__collection {
+    width: 100%;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    overflow-x: scroll;
+  }
+  .featured__collection > div {
+    width: 100%;
+  }
+  .team__container {
+    padding: 40px 20px;
+  }
+  .employee > img {
+    width: 100%;
+  }
+  .contact__container {
+    padding: 40px 20px;
+  }
+  .contact__map {
+    width: 100%;
+  }
+  .contact__map iframe {
+    max-width: 100%;
+    max-height: -webkit-fit-content;
+    max-height: -moz-fit-content;
+    max-height: fit-content;
+  }
 }
